Added extra column for active value

--- a/src/table-style.sass
+++ b/src/table-style.sass
@@ -24,7 +24,8 @@ div.rendered-react-keyed-file-browser
     th, td
       &.size, &.modified
         text-align: right
-
+      &.active
+        test-align: center
       &.name
         i
           padding-right: $main-padding
