*Added new column for folder path *Added animation to display full path

--- a/src/table-style.sass
+++ b/src/table-style.sass
@@ -25,7 +25,10 @@ div.rendered-react-keyed-file-browser
       &.size, &.modified
         text-align: right
       &.active
-        test-align: center
+        text-align: center
+      &.path
+        text-overflow: ellipsis
+        max-width: 300px
       &.name
         i
           padding-right: $main-padding
